# SoupHeatMap

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: json_processor.rs  lib.rs  main.rs  models.rs
src/components/: Heatmap.tsx  OverlayCanvas.tsx  OverlayToolbar.tsx  VirtualizedMatchSelector.tsx
src/components/controls/: MapSelector.tsx  MatchSelector.tsx  ViewModeSelector.tsx
src/components/layout/: Header.tsx
src/components/panels/: FiltersPanel.tsx
src/hooks/: useDebounce.ts
src/lib/: coordinateTransform.ts  export-utils.ts  tauri-api.ts
